# forkd

./: 0001-feat-mem-backend-shared-option-for-MAP-SHARED.patch  CHANGELOG.md  Cargo.toml  DESIGN-v0.4-PHASE3-SPIKE.md  DESIGN-v0.5-diff-snapshot-chains.md  DESIGN.md  README-zh.md  README.md  ROADMAP.md  registry.json
.github/workflows/: release.yml
bench/chain-spawn/: RESULTS-v0.5.md  bench-chain-spawn.py  chain-build.csv  chain-spawn.csv  correctness.csv
bench/live-fork-pause-window/: bench-hugepages.py
bench/pause-window/: PROBE-multi-branch-anomaly.md  RESULTS-v0.2.md  RESULTS-v0.3.md  probe-bpftrace-fc.sh  probe-perf-hybrid.sh  probe-syscall-poll.sh  ssd-sweep.csv  tmpfs-sweep.csv
crates/forkd-cli/: Cargo.toml
crates/forkd-cli/src/: doctor.rs  hub.rs  main.rs  sandbox.rs
crates/forkd-controller/: Cargo.toml
crates/forkd-controller/src/: api.rs  audit.rs  auth.rs  http.rs  lib.rs  main.rs  state.rs
crates/forkd-controller/tests/: http_integration.rs
crates/forkd-uffd/src/: wp_snapshot.rs
crates/forkd-vmm/: Cargo.toml
crates/forkd-vmm/src/: cgroup.rs  chain.rs  lib.rs  memfd.rs
docs/: API.md  HUB.md  INTEGRATION-BOXLITE.md  INTEGRATION-CUBESANDBOX.md  ROADMAP.md  SECURITY.md  VENDORED-FIRECRACKER.md
docs/assets/charts/: gen_charts.py
experiments/v0.4-memfd-share-spike/: README.md  spike.py
packaging/k8s/: forkd-controller.yaml
recipes/: README.md
recipes/agent-workbench/: README.md  build.sh
recipes/coding-agent/: README.md  build.sh
recipes/e2b-codeinterpreter/: README.md  build.sh  demo.py
recipes/jupyter-kernel/: README.md  build.sh
recipes/nodejs/: README.md  build.sh
recipes/playwright-browser/: README.md  build.sh
recipes/python-numpy/: README.md  build.sh
recipes/speculative-agent/: README.md
rootfs-init/: forkd-agent.py
rootfs-init/tests/: README.md  e2e-playwright.sh  fake-warmup.py  smoke-sdk.py  smoke-test.sh
scripts/: build-guest-kernel.sh  build-rootfs.sh  host-tap.sh  install-guest-kernel.sh  netns-setup.sh
scripts/dev/: e2e-live-branch.py  test-shared.sh  v05-e2e.sh
sdk/python/: pyproject.toml
sdk/python/forkd/: __init__.py  controller.py  sandbox.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: controller.ts  types.ts
