[package]
name = "forkd-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "forkd-controller"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
forkd-vmm = { path = "../forkd-vmm" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
parking_lot.workspace = true

# posix_fallocate for the memory.bin pre-allocation in BRANCH path
# (issue #146). Avoids ext4 mballoc cost on writeback.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
reqwest.workspace = true
rcgen.workspace = true
