[package]
name = "forkd-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "forkd-controller"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
forkd-vmm = { path = "../forkd-vmm" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
parking_lot.workspace = true
# Audit log RFC3339 timestamps. Was hand-rolled (Howard Hinnant's algorithm)
# but had two latent bugs (issue #158): pre-epoch clocks collapsed to
# 1970-01-01 via unwrap_or(0), and the i64→i32 year cast overflowed for
# corrupted state files. `time` is ~30 KiB, already in axum's tree.
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }

# posix_fallocate for the memory.bin pre-allocation in BRANCH path
# (issue #146). Avoids ext4 mballoc cost on writeback.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
reqwest.workspace = true
rcgen.workspace = true
